--- a/.github/workflows/build_and_publish_to_pypi.yml
+++ b/.github/workflows/build_and_publish_to_pypi.yml
@@ -3,15 +3,15 @@ name: Build and Publish to PyPI
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags
+      - 'v*'
 
 jobs:
-  build:
-    name: Build distribution
+  test:
+    name: Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12", "3.13"]  # Specify the Python versions to use
+        python-version: ["3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout code
@@ -25,15 +25,38 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine  # Install build and twine for packaging and publishing
+          pip install -e .[test]
 
-      - name: Build distributions
-        run: python -m build  # Build the package (both wheel and sdist)
+      - name: Run tests
+        run: |
+          python -m pytest
 
-      - name: Upload artifact
+  build:
+    name: Build distribution
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+
+      - name: Build distribution
+        run: python -m build
+
+      - name: Store the distribution packages
         uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ matrix.python-version }}
+          name: python-package-distributions
           path: dist/
 
   publish:
@@ -45,14 +68,11 @@ jobs:
       id-token: write
 
     steps:
-      - name: Download artifacts
+      - name: Download all the dists
         uses: actions/download-artifact@v4
         with:
-          name: dist-${{ needs.build.outputs.python-version }}  # Adjust to match the artifact name
-          path: dist/  # Download the built distributions
+          name: python-package-distributions
+          path: dist/
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          username: marhofmann  # Use your PyPI username
-          password: ${{ secrets.PYPI_TOKEN }}  # Reference the secret for your PyPI token
