--- a/.github/workflows/build_and_publish_to_pypi.yml
+++ b/.github/workflows/build_and_publish_to_pypi.yml
@@ -4,13 +4,80 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
-  test:
-    name: Test on Python ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+  build-wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-14]  # macos-14 for Apple Silicon
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.16.2
+
+      - name: Build wheels
+        env:
+          CIBW_BUILD: "cp311-* cp312-*"  # Build for Python 3.11 and 3.12
+          CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux_i686"  # Skip 32-bit
+          CIBW_ARCHS_LINUX: x86_64 aarch64
+          CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_ARCHS_WINDOWS: AMD64
+          CIBW_BEFORE_BUILD: pip install numpy cython
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: pytest {project}/tests --tb=short
+        run: python -m cibuildwheel --output-dir wheelhouse
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
+
+  build-sdist:
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build cython numpy
+
+      - name: Build source distribution
+        run: python -m build --sdist
+
+      - name: Upload sdist
+        uses: actions/upload-artifact@v4
+        with:
+          name: cibw-sdist
+          path: dist/*.tar.gz
+
+  test-wheels:
+    name: Test wheels
+    needs: [build-wheels, build-sdist]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.11", "3.12"]
 
     steps:
@@ -22,56 +89,38 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Download wheels
+        uses: actions/download-artifact@v4
+        with:
+          pattern: cibw-wheels-*
+          merge-multiple: true
+          path: wheelhouse/
+
+      - name: Install wheel
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[full]
+          # Find and install the appropriate wheel for this platform and Python version
+          python -m pip install --find-links wheelhouse/ pyorps --force-reinstall
 
-      - name: Run tests
+      - name: Test installation
         run: |
-          python -m pytest
-
-  build:
-    name: Build distribution
-    needs: test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-
-      - name: Build distribution
-        run: python -m build
-
-      - name: Store the distribution packages
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-package-distributions
-          path: dist/
+          python -c "import pyorps; print('Successfully imported pyorps')"
+          python -c "from pyorps.utils import find_path_cython; print('Cython module imported successfully')"
 
   publish:
     name: Publish to PyPI
-    needs: build
+    needs: [build-wheels, build-sdist, test-wheels]
     runs-on: ubuntu-latest
     environment: pypi
     permissions:
       id-token: write
 
     steps:
-      - name: Download all the dists
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: python-package-distributions
+          pattern: cibw-*
+          merge-multiple: true
           path: dist/
 
       - name: Publish to PyPI
