--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include LICENSE
 include README.md
 include pyproject.toml
 include setup.py
+include pyorps/utils/.pxd include pyorps/utils/.pyx
+include pyorps/utils/*.cpp
 recursive-include pyorps *.py
 recursive-include pyorps *.pyx
 recursive-include pyorps *.pxd
