--- a/.github/workflows/build_and_publish_to_pypi.yml
+++ b/.github/workflows/build_and_publish_to_pypi.yml
@@ -28,8 +28,11 @@ jobs:
 
       - name: Build wheels
         env:
+          # Target CPython versions
           CIBW_BUILD: "cp311-* cp312-*"
+          # Skip 32-bit and musllinux if you don't support them
           CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux_i686"
+          # Architectures
           CIBW_ARCHS_LINUX: x86_64 aarch64
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_WINDOWS: AMD64
@@ -37,11 +40,13 @@ jobs:
           # Build-time prerequisites for your Cython extensions
           CIBW_BEFORE_BUILD: pip install "numpy>=2" cython
 
-          # Install your wheel with extras during testing so optional backends are available
-          CIBW_TEST_EXTRAS: "all"
-          # extras[test] already includes pytest
-          CIBW_TEST_REQUIRES: ""
-          CIBW_TEST_COMMAND: pytest {project}/tests --tb=short --import-mode=importlib
+          # Explicitly install optional backends before tests, so backend tests pass
+          CIBW_BEFORE_TEST: pip install -U "networkx>=3" "rustworkx>=0.14" "python-igraph>=0.11" "networkit>=11" "pytest>=7"
+
+          # Force pytest to import from installed wheel, not the source checkout
+          CIBW_TEST_COMMAND_LINUX: pytest {project}/tests --tb=short --import-mode=importlib
+          CIBW_TEST_COMMAND_MACOS: pytest {project}/tests --tb=short --import-mode=importlib
+          CIBW_TEST_COMMAND_WINDOWS: python -m pytest {project}\tests --tb=short --import-mode=importlib
 
           CIBW_BUILD_VERBOSITY: 1
 
@@ -115,7 +120,7 @@ jobs:
 
       - name: Quick import test
         run: |
-          python -c "import pyorps; print('Successfully imported pyorps')"
+          python -c "import pyorps; import pyorps.utils.path_algorithms; print('Successfully imported pyorps and extension')"
 
   publish:
     name: Publish to PyPI
