--- a/.github/workflows/build_and_publish_to_pypi.yml
+++ b/.github/workflows/build_and_publish_to_pypi.yml
@@ -18,10 +18,6 @@ jobs:
             CIBW_ARCHS_LINUX: "x86_64 aarch64"
           - os: windows-latest
             CIBW_ARCHS_WINDOWS: "AMD64"
-          - os: macos-13    # Intel host -> native x86_64 builds
-            CIBW_ARCHS_MACOS: "x86_64"
-          - os: macos-14    # Apple Silicon host -> native arm64 builds
-            CIBW_ARCHS_MACOS: "arm64"
 
     steps:
       - name: Checkout code
@@ -44,25 +40,19 @@ jobs:
 
           # Architectures (from matrix)
           CIBW_ARCHS_LINUX: ${{ matrix.CIBW_ARCHS_LINUX }}
-          CIBW_ARCHS_MACOS: ${{ matrix.CIBW_ARCHS_MACOS }}
           CIBW_ARCHS_WINDOWS: ${{ matrix.CIBW_ARCHS_WINDOWS }}
 
           # Build-time prerequisites for your Cython extensions
           CIBW_BEFORE_BUILD: pip install "numpy>=2" cython
 
-          # Install your wheel with the full extra during tests
-          CIBW_TEST_EXTRAS: "full"
+          # For Linux: skip tests inside manylinux containers to avoid pyproj source builds
+          CIBW_TEST_SKIP: "*-manylinux_*"
 
-          # Copy tests into the temp CWD so imports come from the installed wheel
-          CIBW_TEST_COMMAND_LINUX: bash -lc 'cp -r {project}/tests . && pytest tests --tb=short'
-          CIBW_TEST_COMMAND_MACOS: bash -lc 'cp -r {project}/tests . && pytest tests --tb=short'
+          # For Windows: run tests normally (copy tests into temp CWD so imports come from installed wheel)
+          CIBW_TEST_EXTRAS: "full"
           CIBW_TEST_COMMAND_WINDOWS: powershell -Command "Copy-Item -Recurse -Force {project}\tests .; python -m pytest tests --tb=short"
 
           CIBW_BUILD_VERBOSITY: 1
-
-          # Optional: enable OpenMP on macOS (requires libomp)
-          # CIBW_BEFORE_BUILD_MACOS: brew install libomp && pip install "numpy>=2" cython
-          # CIBW_ENVIRONMENT_MACOS: ENABLE_OPENMP=1
 
         run: python -m cibuildwheel --output-dir wheelhouse
 
@@ -99,23 +89,30 @@ jobs:
           path: dist/*
 
   test-wheels:
-    name: Test wheels
+    name: Test built wheels on hosts
     needs: [build-wheels, build-sdist]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
-        python-version: ["3.11", "3.12"]
+        include:
+          - os: ubuntu-latest
+            python: "3.11"
+          - os: ubuntu-latest
+            python: "3.12"
+          - os: windows-latest
+            python: "3.11"
+          - os: windows-latest
+            python: "3.12"
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
 
       - name: Download wheels
         uses: actions/download-artifact@v4
@@ -124,14 +121,19 @@ jobs:
           merge-multiple: true
           path: wheelhouse/
 
+      - name: Upgrade pip (host)
+        run: python -m pip install -U pip setuptools wheel
+
       - name: Install wheel (with full extra)
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
           python -m pip install --find-links wheelhouse/ "pyorps[full]" --force-reinstall
 
-      - name: Quick import test
+      - name: Run tests (Linux/Windows hosts)
+        shell: bash
         run: |
-          python -c "import pyorps, sys; print('pyorps:', pyorps.__file__); import pyorps.utils.path_algorithms as m; print('ext:', m.__file__)"
+          cp -r tests ./tests_run
+          pytest tests_run --tb=short
 
   publish:
     name: Publish to PyPI
