--- a/.github/workflows/build_and_publish_to_pypi.yml
+++ b/.github/workflows/build_and_publish_to_pypi.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            CIBW_ARCHS_LINUX: "x86_64 aarch64"
+            CIBW_ARCHS_LINUX: "x86_64"
           - os: windows-latest
             CIBW_ARCHS_WINDOWS: "AMD64"
 
@@ -45,10 +45,10 @@ jobs:
           # Build-time prerequisites for your Cython extensions
           CIBW_BEFORE_BUILD: pip install "numpy>=2" cython
 
-          # For Linux: skip tests inside manylinux containers to avoid pyproj source builds
+          # Skip running tests inside manylinux to avoid pyproj source builds
           CIBW_TEST_SKIP: "*-manylinux_*"
 
-          # For Windows: run tests normally (copy tests into temp CWD so imports come from installed wheel)
+          # Run tests on Windows during build (copy tests so imports come from installed wheel)
           CIBW_TEST_EXTRAS: "full"
           CIBW_TEST_COMMAND_WINDOWS: powershell -Command "Copy-Item -Recurse -Force {project}\tests .; python -m pytest tests --tb=short"
 
@@ -121,7 +121,7 @@ jobs:
           merge-multiple: true
           path: wheelhouse/
 
-      - name: Upgrade pip (host)
+      - name: Upgrade pip
         run: python -m pip install -U pip setuptools wheel
 
       - name: Install wheel (with full extra)
@@ -129,7 +129,7 @@ jobs:
         run: |
           python -m pip install --find-links wheelhouse/ "pyorps[full]" --force-reinstall
 
-      - name: Run tests (Linux/Windows hosts)
+      - name: Run tests
         shell: bash
         run: |
           cp -r tests ./tests_run
